<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">ChatSense</string>
    <string name="title_activity_main">ChatSense</string>
    <string name="package_name">com.thegreatparthicle.chatsense</string>
    <string name="custom_url_scheme">com.thegreatparthicle.chatsense</string>
</resources>
